Add MiddleClickAutoscroll cursors back on X11

Middle click autoscroll is usable on Linux with
--enable-blink-features=MiddleClickAutoscroll, so add the appropriate
X11 cursors.

BUG=695163
R=sadrul@chromium.org

Review-Url: https://codereview.chromium.org/2705293009
Cr-Commit-Position: refs/heads/master@{#452404}

Former-commit-id: 7c9f614166029371f91aa336d3154ed0cf4d224e